# hamstercsv

./: Cargo.toml  README.md
src/: cli.rs  csv.rs  lib.rs  main.rs  screen.rs
src/config/: aesthetics.rs  csv.rs  mod.rs
src/data/: builder.rs  mod.rs  unicode.rs
src/display/: cursed.rs  mod.rs
src/utils/: errors.rs
