[package]
name = "hamstercsv"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
clap = "3.0.0-beta.2"
ncurses = { version = "5.101.0", features = ["wide"] }
serde = "1.0.126"
unicode-segmentation = "1.8.0"
log = "0.4.14"
simple-logging = "2.0.2"
byteorder = "1.4.3"